@@ -5,6 +5,9 @@ GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
 2006/08/02
+	* Merged Sacrifice's damage cap fix. [Skotlex]
+	* Merged flag&16 on battle_calc_base_damage so that Venom Knives and the
+	  like won't get the dex damage bonus of ranged weapons. [Skotlex]
 	* Fixed Defender Raising Walk speed instead of diminishing it. [Skotlex]
 	* Swaped val3/val4 of defender so that all walking penalty skills store
 	  said penalty in val3. [Skotlex]
