@@ -1,3 +1,5 @@
+08/02
+	* Merged Stun time of Scream/Hammerfall -> 5 secs [Skotlex]
 08/01
 	* Some minor item fixes [Playtester]
 07/31
